--- a/wiki/ProjectMilestones.wiki
+++ b/wiki/ProjectMilestones.wiki
@@ -1,13 +1,5 @@
 #summary Where am I going with this.
 
-= Introduction =
-
-Add your content here.
-
-
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+  * Work out how file transfer works
+  * Work out how weight data in file is held
+  * Write Application to import data into!
