--- a/wiki/ProjectMilestones.wiki
+++ b/wiki/ProjectMilestones.wiki
@@ -1,5 +1,6 @@
 #summary Where am I going with this.
 
   * Work out how weight data is held on the usb stick
+  * Download & Install Microsoft Visual Studio Express 2008
   * Write Application to import data into!
   * Make cup of tea!
