--- a/wiki/ProjectMilestones.wiki
+++ b/wiki/ProjectMilestones.wiki
@@ -2,5 +2,5 @@
 
   * Work out how weight data is held on the usb stick (done)
   * Download & Install Microsoft Visual Studio Express 2008
-  * Write Application to import data into!
+  * Write test application to import data into!
   * Make cup of tea!
