Edited wiki page through web user interface.

--- a/wiki/ChartingComponents.wiki
+++ b/wiki/ChartingComponents.wiki
@@ -7,3 +7,6 @@ http://www.advsofteng.com/cdnet.html
 http://www.codeproject.com/KB/graphics/zedgraph.aspx
 http://www.c-sharpcorner.com/UploadFile/mgold/GraphicsComponent09142005054420AM/GraphicsComponent.aspx
 http://stackoverflow.com/questions/433729/free-c-grid-graph-component
+
+ - Looks Cool!<br>
+http://www.brainyautomation.com/blog/post/Google-Chart-C-API.aspx<br>
