Edited wiki page through web user interface.

--- a/wiki/ProjectMilestones.wiki
+++ b/wiki/ProjectMilestones.wiki
@@ -5,7 +5,7 @@
   * Write test application to import data into!
 
   * Add new user to system.
-     - User Number On Scales
+     - User Number On Scales<br>
      - User Name
      - Taget Weight
      - Target Body Fat
