Edited wiki page through web user interface.

--- a/wiki/BodyWater.wiki
+++ b/wiki/BodyWater.wiki
@@ -1,4 +1,4 @@
-#summary Body Water %
+#summary Body Water % Calculation!
 
 I just thought id create this stub page for anyone who comes across the fomula of how to calculate body water % to be able to add it in the comments of this page!
 
